--- a/index.html
+++ b/index.html
@@ -174,17 +174,17 @@
                             <div id="toolbox">
                                 <div class="skillset">
                                     <font class="skilltype">Languages</font>
-                                    <li>C & C++</li>
-                                    <li>Python</li>
+                                    <li title="Pirate of G++ C!">C & C++</li>
+                                    <li title="Jinchūriki of py_tailed_fox!">Python</li>
                                     <li>JavaScript</li>
-                                    <li>PHP</li>
+                                    <li title="Programmers Hate PHP">PHP</li>
                                     <li>SQL</li>
                                 </div>
                                 <div class="skillset">
                                     <font class="skilltype">Frameworks</font>
-                                    <li>Django & DRf</li>
-                                    <li>ElectronJS</li>
-                                    <li>Flutter</li>
+                                    <li title="Unchained!!!">Django & DRf</li>
+                                    <li title="1.602176634e−19 C">ElectronJS</li>
+                                    <li title="Dart side wins!">Flutter</li>
                                     <li>Unity 3D</li>
                                 </div>
                                 <div class="skillset">
@@ -196,7 +196,7 @@
                                 </div>
                                 <div class="skillset">
                                     <font class="skilltype">Tools</font>
-                                    <li>Git & Github</li>
+                                    <li title="Release the Octocat!!!">Git & Github</li>
                                     <li>Chrome DevTools</li>
                                     <li>Dialogflow</li>
                                     <li>cURL</li>
@@ -204,9 +204,9 @@
                                 </div>
                                 <div class="skillset">
                                     <font class="skilltype">Others</font>
-                                    <li>NodeJS</li>
-                                    <li>CapacitorJS</li>
-                                    <li>Ethereum</li>
+                                    <li title="Deno is Coming!">NodeJS</li>
+                                    <li title="q/V">CapacitorJS</li>
+                                    <li title="Ledger Notes it All!">Ethereum</li>
                                     <li>PostGIS</li>
                                 </div>
                             </div>
