--- a/index.max.html
+++ b/index.max.html
@@ -69,7 +69,7 @@
                                     <img src="../assets/github.svg">
                                 </th>
                                 <th>
-                                    <a href="mailto:agarwal.parth.101.protonmail.com" title="agarwal.parth.101.protonmail.com">
+                                    <a href="mailto:agarwal.parth.101@protonmail.com" title="agarwal.parth.101@protonmail.com">
                                         <img src="../assets/protonmail.svg">
                                     </a>
                                 </th>
