--- a/index.max.html
+++ b/index.max.html
@@ -39,12 +39,12 @@
                         </tr>
                         <tr>
                             <th align="right">
-                                <a href="mailto:agarwal.parth.101@protonmail.com">
+                                <a href="mailto:dev.ra.101@protonmail.com">
                                     <img src="../assets/protonmail.svg">
                                 </a>
                             </th>
                             <td>
-                                <a href="mailto:agarwal.parth.101@protonmail.com">agarwal.parth.101@protonmail.com</a>
+                                <a href="mailto:dev.ra.101@protonmail.com">dev.ra.101@protonmail.com</a>
                             </td>
                         </tr>
                     </table>
@@ -69,7 +69,7 @@
                                     <img src="../assets/github.svg">
                                 </th>
                                 <th>
-                                    <a href="mailto:agarwal.parth.101@protonmail.com" title="agarwal.parth.101@protonmail.com">
+                                    <a href="mailto:dev.ra.101@protonmail.com" title="dev.ra.101@protonmail.com">
                                         <img src="../assets/protonmail.svg">
                                     </a>
                                 </th>
