--- a/index.max.html
+++ b/index.max.html
@@ -11,6 +11,11 @@
         >
         <link href="../stylesheets/index.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,900;1,700&display=swap" rel="stylesheet">
+        <script>
+            window.onbeforeunload = function () {
+              window.scrollTo(0, 0);
+            }
+        </script>
     </head>
     <body>
         <div id="wrapper">
