--- a/index.max.html
+++ b/index.max.html
@@ -18,7 +18,12 @@
         </script>
     </head>
     <body>
+        <div id="bg">
+        <div id="virtual"></div>
+        <div id="universe"></div>
+        </div>
         <div id="wrapper">
+            
             <div id="progressbar"></div>
             <div id="scrollPath"></div>
             <div id="panel" class="active-left">
@@ -313,5 +318,7 @@
                     </div>
                 </div>
             </div>
+            <script src="./scripts/bg.js"></script>
             <script src="./scripts/index.js"></script>
+            </body>
         </html>
