--- a/index.max.html
+++ b/index.max.html
@@ -318,6 +318,7 @@
                     </div>
                 </div>
             </div>
+            </div>
             <script src="./scripts/bg.js"></script>
             <script src="./scripts/index.js"></script>
             </body>
