Update Main Page

--- a/index.max.html
+++ b/index.max.html
@@ -49,12 +49,12 @@
                         </tr>
                         <tr>
                             <th align="right">
-                                <a href="mailto:dev.ra.101@protonmail.com">
+                                <a href="mailto:ra101.dev@protonmail.com">
                                     <img src="../assets/protonmail.svg">
                                 </a>
                             </th>
                             <td>
-                                <a href="mailto:dev.ra.101@protonmail.com">dev.ra.101@protonmail.com</a>
+                                <a href="mailto:ra101.dev@protonmail.com">ra101.dev@protonmail.com</a>
                             </td>
                         </tr>
                     </table>
@@ -79,7 +79,7 @@
                                     <img src="../assets/github.svg">
                                 </th>
                                 <th>
-                                    <a href="mailto:dev.ra.101@protonmail.com" title="dev.ra.101@protonmail.com">
+                                    <a href="mailto:ra101.dev@protonmail.com" title="ra101.dev@protonmail.com">
                                         <img src="../assets/protonmail.svg">
                                     </a>
                                 </th>
@@ -111,8 +111,8 @@
                             <div id="intro">
                                 I am currently a(n):
                                 <li>
-                                    <span class="bullet">🎓</span>
-                                    <font title="@Jaypee Institute of Information Technology">C.S.E. final year undergrad.</font>
+                                    <span class="bullet">💀</span>
+                                    Backend dev.
                                 </li>
                                 <li>
                                     <span class="bullet">🚀</span>
@@ -121,10 +121,6 @@
                                 <li>
                                     <span class="bullet">📈</span>
                                     <font title="I don't worry, if can't understand ;)">AI Enthusiast</font>
-                                </li>
-                                <li>
-                                    <span class="bullet">💀</span>
-                                    Backend dev.
                                 </li>
                                 <li>
                                     <span class="bullet">🎨</span>
@@ -142,11 +138,21 @@
                     <div class="full_scale" id="background">
                         <br>
                         <br>
-                        <div id="exp" class="passive">
+						<div id="exp" class="passive">
                             <h1 class="headiers">Experience:</h1>
                             <hr>
                             <table class="exp">
                                 <tr>
+                                    <th colspan="2">Innovaccer</th>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">SDE - 1 (Backend)</td>
+                                </tr>
+                                <tr>
+                                    <td>Product Engineering</td>
+                                    <td id="date">Feb 2021 - Present</td>
+                                </tr>
+								<tr>
                                     <th colspan="2">Innovaccer</th>
                                 </tr>
                                 <tr>
@@ -168,10 +174,10 @@
                                     <th colspan="2">Jaypee Institute of Information Technology, Noida Sec 62</th>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">B. Tech. / CSE</td>
+                                    <td colspan="2">B. Tech, CSE (Hons.)</td>
                                 </tr>
                                 <tr>
-                                    <td>A CGPA of 7.8 as of end of 5th semester.</td>
+                                    <td>Graduated with a C.G.P.A. of 8.0</td>
                                     <td id="date">July 2017 - May 2021</td>
                                 </tr>
                             </table>
