--- a/v1/index.html
+++ b/v1/index.html
@@ -11,13 +11,13 @@
     <div id="ra"></div>
     <div id="wormhole">
       <center>
-        <a href="./dev/" ><img id="pic" src="./assets/portal.png" alt="wormhole" /></a>
+        <a href="/v0" ><img id="pic" src="./assets/portal.png" alt="wormhole" /></a>
       </center>
     </div>
     <h1 id="link">
-      <a href="https://ra101.github.io">https://ra101.github.io</a>
+      <a href="/v1">https://ra101.github.io</a>
     </h1>
-    <a id="skip" href="./dev/">SKIP >></a>
+    <a id="skip" href="/v0">SKIP >></a>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
