--- a/index.html
+++ b/index.html
@@ -1,1 +1,74 @@
-<html> <head> <title>Parth Agarwal </title> <link rel="icon" href="../assets/resume.ico" sizes="any" type="image/x-icons" > <link href="../stylesheets/index.min.css" rel="stylesheet" type="text/css"> <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,900;1,700&display=swap" rel="stylesheet"> <script>window.onbeforeunload=function (){window.scrollTo(0, 0);}</script> </head> <body> <div id="bg"> <div id="virtual"></div><div id="universe"></div></div><div id="wrapper"> <div id="progressbar"></div><div id="scrollPath"></div><div id="panel" class="active-left"> <br><div id="self" class="active-top"> <center> <img src="../assets/pp.jpg" id="pp"> </center> <h1 title="< RA >">Parth Agarwal</h1> <hr> </div><div class="links active-left" id="link1"> <table> <tr> <th align="right"> <a href="https://github.com/ra101"> <img src="../assets/resume.svg"> </a> </th> <td> <a href="https://raw.githubusercontent.com/ra101/ra101/core/Resume.pdf">Résumé</a> </td></tr><tr> <th align="right"> <a href="mailto:ra101.dev@protonmail.com"> <img src="../assets/protonmail.svg"> </a> </th> <td> <a href="mailto:ra101.dev@protonmail.com">ra101.dev@protonmail.com</a> </td></tr></table> </div><div class="links active-top" id="loc"> <table> <tr> <th width="40%" align="right"> <img src="../assets/location.svg"> </th> <td> NCR, Delhi </td></tr></table> </div><div class="links active-top" id="link2"> <table style="border-top:1px solid lightgray"> <tr> <th> <a href="https://github.com/ra101" title="ra101" target="_blank"> <img src="../assets/github.svg"> </th> <th> <a href="mailto:ra101.dev@protonmail.com" title="ra101.dev@protonmail.com"> <img src="../assets/protonmail.svg"> </a> </th> <th> <a href="https://www.linkedin.com/in/agarwal-parth/" target="_blank" title="/in/agarwal-parth/"> <img src="../assets/linkedin.svg"> </a> </th> <th> <a href="https://t.me/ra_101" title="ra_101" target="_blank"> <img src="../assets/telegram.svg"> </a> </th> </tr></table> </div></div><div id="content"> <div class="full_scale"> <div id="introduction" class="active-left"> <h1 class="headiers" style="font-size: 4em;"> <font style="font-family: 'Courier New', Courier, monospace;">></font> Hi <font id="ip_add">127.0.0.1</font> ! <span id="hello_emoji"></span> </h1> <br><div id="intro"> I am currently a(n): <li> <span class="bullet">💀</span> Backend dev. </li><li> <span class="bullet">🚀</span> Python, C++ and JS Developer </li><li> <span class="bullet">📈</span> <font title="I don't worry, if can't understand ;)">AI Enthusiast</font> </li><li> <span class="bullet">🎨</span> lil' bit of a Front-End Designer </li><li> <span class="bullet">😤</span> Self-Proclaimed Photoshop Master </li><br>I like to explore other languages / frameworks / tech as well, such as Electron, Unity, Django ...etc. </div></div></div><div class="full_scale" id="background"> <br><br><div id="exp" class="passive"> <h1 class="headiers">Experience:</h1> <hr> <table class="exp"> <tr> <th colspan="2">Innovaccer</th> </tr><tr> <td colspan="2">SDE - 1 (Backend)</td></tr><tr> <td>Product Engineering</td><td id="date">Feb 2021 - Present</td></tr><tr> <th colspan="2">Innovaccer</th> </tr><tr> <td colspan="2">SDE - Intern</td></tr><tr> <td>Product Engineering</td><td id="date">April 2020 - June 2020</td></tr></table> </div><br><br><div id="edu" class="passive"> <h1 class="headiers">Education:</h1> <hr> <table class="edu"> <tr> <th colspan="2">Jaypee Institute of Information Technology, Noida Sec 62</th> </tr><tr> <td colspan="2">B. Tech, CSE (Hons.)</td></tr><tr> <td>Graduated with a C.G.P.A. of 8.0</td><td id="date">July 2017 - May 2021</td></tr></table> </div></div><br><br><div class="full_scale"> <div id="skills"> <div class="passive"> <h1 class="headiers">Skills:</h1> <hr> </div><div id="toolbox" class="passive"> <div class="skillset"> <font class="skilltype">Languages</font> <li title="Pirate of G++ C!">C & C++</li><li title="Jinchūriki of py_tailed_fox!">Python</li><li>JavaScript</li><li title="Programmers Hate PHP">PHP</li><li>SQL</li></div><div class="skillset"> <font class="skilltype">Frameworks</font> <li title="Unchained!!!">Django & DRf</li><li title="1.602176634e−19 C">ElectronJS</li><li title="Dart side wins!">Flutter</li><li>Unity 3D</li></div><div class="skillset"> <font class="skilltype">Databases</font> <li>MySQL</li><li>MariaDB</li><li>MongoDB</li><li>PostgreSQL</li></div><div class="skillset"> <font class="skilltype">Tools</font> <li title="Release the Octocat!!!">Git & Github</li><li>Chrome DevTools</li><li>Dialogflow</li><li>cURL</li><li>Postwoman</li></div><div class="skillset"> <font class="skilltype">Others</font> <li title="Deno is Coming!">NodeJS</li><li title="q/V">CapacitorJS</li><li title="Ledger Notes it All!">Ethereum</li><li>PostGIS</li></div></div></div></div><br><br><div id="projects"> <div class="passive"> <h1 class="headiers">Projects:</h1> <hr> </div><div id="truck"> <div id="box" class="passive" class="passive"> <p id="heading"> <a href="https://t.me/MasquerBot" target="_blank">MasquerBot</a> </p><p id="disc"> Click <a href="https://github.com/ra101/MasquerBot" target="_blank">here</a> to visit repo. <br>This Telegram Bot uses state-of-the-art encryption algorithm (ECDSA) and pixel manipulation (steganography) to masque any given{text}within any given{image}. </p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/Entry-Management-Software" target="_blank">Entry Managment System</a> </p><p id="disc">A basic booking system with general idea of host and client built using Electron (Node.JS), Firebase and other APIs</p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/Reducing-the-Global-Carbon-Footprint-based-on-MARL" target="_blank">Reducing the Global Carbon Footprint based on MARL</a> </p><p id="disc">Future work on the paper "Reducing Global Carbon Footprint based on MARL" by "Valentin Kahn".</p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/kissSolver" target="_blank">kissSolver</a> </p><p id="disc">An A.I. C.A.P.T.C.H.A. Solver browser-extension for KissAnime written in JavaScript with help of python.</p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/Generic-BlockChain-container-cpp" target="_blank">BlockChain Template Container</a> </p><p id="disc">A STL sort of container, which takes in a hash function and transaction class as inputs.</p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/quantum-gates-simulator-cpp" target="_blank">Quantum Simulator{WIP}</a> </p><p id="disc">Simulating Qubit gates/algos on binary bits to get result as of a ideal quantum computer.</p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/Maze-Solver-Cpp" target="_blank">Maze Solver</a> </p><p id="disc">Input a Image, Choose from a variety of algorithms, get solved image along with time and steps mesurement.</p></div><div id="box" class="passive"> <p id="heading"> <a href="http://thewtvlist.epizy.com/" target="_blank">the WTV List</a> </p><p id="disc"> Click <a href="https://github.com/ra101/theWTVlist" target="_blank">here</a> to visit repo. <br>This is cataloging website, with adv. search options using sql queries. </p></div><div id="box" class="passive"> <p id="heading"> <a href="https://github.com/ra101/Connect-4" target="_blank">Connect 4</a> </p><p id="disc"> A 2P Game made in "C" with the use of pointers, customized stack and file handling with save option. </p></div></div></h1> <br><div id="footer"> Made with <font color="red">❤</font> by <b>〈 RA 〉</b> </div></div></div></div><script src="./scripts/bg.min.js"></script> <script src="./scripts/index.min.js"></script> </body> </html>
+<html>
+    <head>
+        <title>Parth Agarwal</title>
+        <link rel="icon" href="./assets/resume.ico" sizes="any" type="image/x-icons">
+        <link href="./stylesheets/index.css" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    </head>
+    <body>
+        <div id="socials">
+            <div class="line"></div>
+            <p>
+                <a target="_blank" href="https://github.com/ra101"><img src="./assets/github.svg"></a>
+                <a target="_blank" href="https://linkedin.com/in/agarwal-parth"><img src="./assets/linkedin.svg"></a>
+                <a target="_blank" href="https://raw.githubusercontent.com/ra101/ra101/core/Resume.pdf"><img src="./assets/resume.svg"></a>
+                <a target="_blank" href="mailto:ping@ra101.dev"><img src="./assets/protonmail.svg"></a>
+                <a target="_blank" href="https://dev.to/ra101"><img src="./assets/dev.svg"></a>
+                <a target="_blank" href="https://t.me/ra_101"><img src="./assets/telegram.svg"></a>
+            </p>
+        </div>
+
+        <div class="boundary"></div>
+        <div class="white-boundary white-boundary-1"></div>
+        <div class="white-boundary white-boundary-2"></div>
+        <div class="white-boundary white-boundary-3"></div>
+        <div class="white-boundary white-boundary-4"></div>
+
+        <div class="wrapper">
+            <center>
+                <img id="dp" src="./assets/dp.jpg">
+            </center>
+            <div class="name-wrapper">
+                <h1>
+                    <span class="hi">Hi, I'm <span class="name">Parth</span>,</span>
+                    <div class="para">
+                        an <span class="green">ever-growing</span>
+                        <span class="orange">versatile</span>
+                        developer based in India. Currently working with
+                        <span class="blue">VoerEir-AB</span>,
+                        developing a network testing manager for telecom cloud infrastructure.
+                    </div>
+                    <div class="para">
+                        I have <span class="orange">2+</span> years of professional experience, and am working with 
+                        <span class="green">Django</span>, <span class="green">Python</span>, <span class="green">Linux</span>,
+                        <span class="green">Docker</span> and <span class="green">Kubernetes</span> on a daily basis.
+                    </div>
+                    <div class="para">
+                        As a hobby developer, God! I have tales to tell! From
+                        <span class="orange">Assembly</span> to <span class="orange">AI</span>, I had an adventure unlike any!
+                        Here is quick list:
+                        <ul>
+                            <li><span class="green">Python</span>: Django, Flask, Tkinter, Keras, PyTorch</li>
+                            <li><span class="blue">Cloud</span>:  Docker, Kubernetes, Gitlab CI, Jenkins</li>
+                            <li><span class="orange">JavaScript</span>: Express, React, Electron</li>
+                            <li><span class="purple">Databases</span>: MySQL, PostgreSQL, MongoDB, Redis</li>
+                            <li><span class="green">Others</span>: Flutter, DialogFlow, Twilio, PHP, Java, Lua</li>
+                            <li><span class="blue">Game Engines</span>: Unity3D (C#), RM-XP (Ruby), M.U.G.E.N</li>                            
+                        </ul>
+                    </div>
+                    <div class="last">
+                        Have an awesome <span id="day">day</span>! Bye!
+                    </div>
+                    <script>
+                        const weekday = [
+                            "Sunday", "Monday", "Tuesday",
+                            "Wednesday", "Thursday", "Friday", "Saturday"
+                        ];
+                        document.getElementById("day").innerHTML = weekday[(new Date()).getDay()];
+
+                    </script>
+                </h1>
+            </div>
+        </div>
+    </body>
+</html>
